# copy-paste

./: .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  TODO.md  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
docs/: branch-protection.md  release-drill.md  release.md  updater.md
scripts/: build-unsigned.mjs
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ClipList.tsx  Empty.tsx  Icons.tsx  TextCard.tsx
src/components/ui/: button.tsx  card.tsx  command.tsx  dialog.tsx  input.tsx
src/hooks/tauri/: shortcuts.ts  useClipboardMonitor.ts
src/lib/: tauri.ts
src/pages/: _app.tsx  index.tsx
src/store/: clips.store.ts
www/: package-lock.json  package.json
www/src/app/: layout.tsx  page.tsx
www/src/components/: Footer.tsx  Icons.tsx  Navbar.tsx
www/src/components/ui/: button.tsx
