[package]
name = "app"
version = "0.1.6"
description = "Copy Pasta is an open source clipboard manager."
authors = ["Raymond Kinne III <Ray@itsfait.com>"]
license = "MIT"
repository = "https://github.com/Faitltd/copy-paste"
default-run = "app"
edition = "2021"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "updater", "system-tray", "macos-private-api", "global-shortcut-all", "process-exit", "window-hide", "window-set-focus", "window-show", "window-unminimize" ] }
window-vibrancy = "0.4.0"
tauri-plugin-clipboard = "0.6.0"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", rev = "6b9f9f8d1580f03d3cffbb8d29f4c6ab017d1589" }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
